ready for registration phase
