# controllers/season.controller.js
@@ -49,7 +49,7 @@ const advanceSeason = asyncHandler(async(req,res)=>{
         res.status(400);
         throw new Error("you have no season running")
     };
-    const groups = ["group_a","group_b","group_c","group_d"];
+    const groups = ["Group A","Group B","Group C","Group D"];
     const currentStage = currentSeason.status;
     switch (currentStage) {
         case "audition":
@@ -61,6 +61,17 @@ const advanceSeason = asyncHandler(async(req,res)=>{
                     let group = groups[count % 4];
                     contestant.group = group;
                     contestant.status = "group";
+                    const message = `
+                        Congratulations ${name} \n 
+                        You are part of the <strong>top 20</strong> to advance to the group stage \n
+                        See you at the next stage where you battle it out with others in <strong>${group}</strong>
+                        Date and time will be announced on our official handles below`;
+
+                    const mail = await sendEmail(email,"Congratulations you advanced",message);
+                    if(!mail){
+                        res.status(400);
+                        throw new Error("Error sending email");
+                    }
                 } else {
                     contestant.status = "eliminated";
                 }
@@ -81,6 +92,16 @@ const advanceSeason = asyncHandler(async(req,res)=>{
                     const contestant = contestants[j];
                     if (j <= 3) {
                         contestant.status = "semi";
+                        const message = `
+                        Congratulations ${name} \n 
+                        You made it to the <strong>top 3</strong> <strong>${groups[i]}</strong> to advance to the semi-finals \n
+                        Date and time will be announced on our official handles below`;
+
+                        const mail = await sendEmail(email,"Congratulations you advanced",message);
+                        if(!mail){
+                            res.status(400);
+                            throw new Error("Error sending email");
+                        }
                     } else {
                         contestant.status = "eliminated";
                     }
@@ -100,6 +121,17 @@ const advanceSeason = asyncHandler(async(req,res)=>{
                     const contestant = contestants[j];
                     if (j === 1) {
                         contestant.status = "final";
+                        const message = `
+                        Congratulations ${name} \n 
+                        You made it to the <strong>finals</strong> as the <strong>${groups[i]}</strong> Top Contestants \n
+                        Can you battle it out with other finalists for the crown \n
+                        Date and time will be announced on our official handles below`;
+
+                        const mail = await sendEmail(email,"Congratulations you advanced",message);
+                        if(!mail){
+                            res.status(400);
+                            throw new Error("Error sending email");
+                        }
                     } else {
                         contestant.status = "eliminated";
                     }
@@ -119,6 +151,16 @@ const advanceSeason = asyncHandler(async(req,res)=>{
                 switch(i){
                     case 0:
                         contestant.status = "winner";
+                        const message = `
+                        Congratulations ${name} \n 
+                        <strong> You are the winner of Streets Got Talent ${currentSeason.title}</strong> \n
+                        Next steps will be communicated on our official handle`;
+
+                        const mail = await sendEmail(email,"Congratulations you are the winner",message);
+                        if(!mail){
+                            res.status(400);
+                            throw new Error("Error sending email");
+                        }
                         break;
                     case 1:
                         contestant.status = "second";
@@ -147,10 +189,19 @@ const advanceSeason = asyncHandler(async(req,res)=>{
             throw new Error("Invalid season status");
     }
     
+});
+
+const allSeasons = asyncHandler(async(req,res)=>{
+    const seasons = await Season.find();
+    return res.status(200).json({
+        success: true,
+        seasons
+    })
 })
 
 module.exports = {
     newSeason,
     currentSeason,
-    advanceSeason
+    advanceSeason,
+    allSeasons
 }
