# routes/season.route.js
@@ -1,14 +1,15 @@
 const express = require("express");
 const checkForMissingFields = require("../middlewares/checkMissingFields");
 const validateToken = require("../middlewares/validateTokenHandler");
-const { newSeason, currentSeason, advanceSeason } = require("../controllers/season.controller");
+const { newSeason, currentSeason, advanceSeason, allSeasons } = require("../controllers/season.controller");
 
 const seasonRoute = express.Router();
 
-seasonRoute.post("/new",validateToken,checkForMissingFields(["title","application_deadline","reg_fee"]),newSeason);
+seasonRoute.route("/")
+    .post(validateToken,checkForMissingFields(["title","application_deadline","reg_fee"]),newSeason)
+    .get(validateToken,allSeasons)
 
 seasonRoute.get("/current",currentSeason);
-
 
 seasonRoute.post("/advance",validateToken,advanceSeason)
 
